Closed
Bug 621328
Opened 15 years ago
Closed 15 years ago
TypeInference: JM: Kraken stanford-crypto-pbkdf2 regression
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
(Whiteboard: fixed-in-jaegermonkey)
The problem can be reduced to this:
---
function foo() {
};
function f() {
var e = foo;
a = new e();
assertEq(typeof(a), "object");
e=a;
}
f();
---
This fails with -m:
typein:6: Error: Assertion failed: got "function", expected "object"
| Reporter | ||
Comment 1•15 years ago
|
||
The first bad revision is:
changeset: 58793:513c680568de
user: Brian Hackett <bhackett1024@gmail.com>
date: Tue Dec 21 07:32:21 2010 -0800
summary: [INFER] Fixes for jstests, bug 620599, part 1.
Comment 2•15 years ago
|
||
When recompiling a cached call to an uncached call (to be fixed by bug 621942, also inference should do better on this and not mark 'a' as unknown, which it's doing), we didn't rejoin in the right place and failed to actually call the function.
http://hg.mozilla.org/projects/jaegermonkey/rev/a5f3949c0db7
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•