[INFER] Handle ic::Call return value after recompiling to an uncached call, bug 621328.